log
Sat, Apr  9, 2022 11:00:43 PM: 
 tests:  0|6
total_score: 0/70
4daf612
Sat, Apr  9, 2022 11:03:42 PM: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
34c0019
Sat, Apr  9, 2022 11:04:33 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e1353a4
Sat, Apr  9, 2022 11:05:36 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
a2d91b8
Sat, Apr  9, 2022 11:07:19 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
4a34490
Sat, Apr  9, 2022 11:08:55 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
8d134f2
Sat, Apr  9, 2022 11:10:46 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0a2d8fc
Sat, Apr  9, 2022 11:21:13 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
681fe25
Sat, Apr  9, 2022 11:21:39 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fcf9313
Sat, Apr  9, 2022 11:26:16 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
a2bcf16
Sun, Apr 10, 2022 12:01:26 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:56:24: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     crearmapa->buckets = (Pair *) calloc (capacity,sizeof(Pair *));
                        ^
cc1.exe: all warnings being treated as errors
Compilation failed
012ad9b
Sun, Apr 10, 2022 12:01:58 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
62efb29
Sun, Apr 10, 2022  1:46:17 PM: 
 hashmap.c | 46 ++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 44 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
690e6fc
Sun, Apr 10, 2022  2:03:45 PM: 
 hashmap.c | 32 ++++++++++++++++++++++++++------
 1 file changed, 26 insertions(+), 6 deletions(-)
 tests:  8|3
total_score: 40/70
c3837dd
Sun, Apr 10, 2022  2:20:17 PM: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
aca7c39
Sun, Apr 10, 2022  2:43:15 PM: 
 hashmap.c | 24 ++++++++++++++++++++++--
 1 file changed, 22 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
d24f0d7
Sun, Apr 10, 2022  2:48:25 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
3eddb1d
Sun, Apr 10, 2022  3:06:06 PM: 
 hashmap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
25f0481
